<resources>
    <string name="app_name">Lost Cities Scorer</string>

    <string name="himalayas">Himalayan Mountains</string>
    <string name="rainforest">Brazilian Rain Forest</string>
    <string name="desert">Saharan Desert</string>
    <string name="volcano">Ancient Volcanoes</string>
    <string name="neptune">Deep Ocean</string>

    <string name="gameTitle">Lost Cities Scorer</string>
    <string name="recentScoreText">Your Recent Scores</string>
    <string name="newGameButton">New Game</string>
    <string name="nextButton">NEXT</string>
    <string name="yourScore">Your Score Is:</string>
    <string name="homeButtonText">HOME</string>
    <string name="saveButtonText">SAVE</string>
    <string name="$button">$</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="sevenButton">7</string>
    <string name="eightButton">8</string>
    <string name="nineButton">9</string>
    <string name="tenButton">10</string>
    <string name="getYourScore">Get Your Score</string>
    <string name="authors">Authors: Casey Riggin, Chris Mendoza, Joe McLaughlin, Sai Chang</string>

</resources>
