<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/desert"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/desert" />
        <item
            android:id="@+id/neptune"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/neptune" />

        <item
            android:id="@+id/himalayas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/himalayas" />
        <item
            android:id="@+id/rainforest"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/rainforest" />
        <item
            android:id="@+id/volcano"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/volcano" />
        <!--<item-->
            <!--android:id="@+id/scoreScreen"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="@string/finalizeScore" />-->
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/feedback" />
            <!--<item-->
            <!--android:id="@+id/nav_send"-->
            <!--android:icon="@drawable/ic_menu_send"-->
            <!--android:title="Send" />-->
        </menu>
    </item>

</menu>
