<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.CardSelectorActivity">

    <TextView
        android:id="@+id/expeditionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/desert"
        android:textSize="30sp" />

    <Button
        app:layout_marginTopPercent="5%"
        android:id="@+id/x1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expeditionTitle"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:soundEffectsEnabled="true"
        android:text="@string/$button"
        android:textColor="@color/white"
        app:layout_marginLeftPercent="3%"/>

    <Button
        android:id="@+id/x2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignTop="@+id/x1"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:soundEffectsEnabled="true"
        android:text="@string/$button"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/x3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/button3"
        android:layout_alignTop="@+id/x2"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:soundEffectsEnabled="true"
        android:text="@string/$button"
        android:textColor="@color/white"
        app:layout_marginRightPercent="3%"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/x1"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/twoButton"
        android:textColor="@color/white"
        app:layout_marginTopPercent="5%"
        app:layout_marginLeftPercent="3%"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignTop="@+id/button2"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/threeButton"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button3"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/fourButton"
        android:textColor="@color/white"
        app:layout_marginRightPercent="3%"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button2"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/fiveButton"
        android:textColor="@color/white"
        app:layout_marginTopPercent="5%"
        app:layout_marginLeftPercent="3%"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignStart="@+id/button9"
        android:layout_alignTop="@+id/button5"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/sixButton"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignTop="@+id/button6"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/sevenButton"
        android:textColor="@color/white"
        app:layout_marginRightPercent="3%"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button5"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/eightButton"
        android:textColor="@color/white"
        app:layout_marginTopPercent="5%"
        app:layout_marginLeftPercent="3%"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button8"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/nineButton"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button9"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/tenButton"
        android:textColor="@color/white"
        app:layout_marginRightPercent="3%"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/nextButton"
        android:textColor="@color/white"
        app:layout_marginBottomPercent="5%"
        app:layout_marginRightPercent="3%"/>

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/calculateScore"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/homeButtonText"
        android:textColor="@color/white"
        app:layout_marginLeftPercent="3%"/>

    <Button
        android:id="@+id/calculateScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/nextButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:text="@string/getYourScore"
        android:textColor="@color/white"
        />

</android.support.percent.PercentRelativeLayout>
